# bevy_chase

./: Cargo.toml  README.md  WORKSPACE  bazel-bevy_chase  bazel-bin  bazel-out  bazel-testlogs
cargo/: crates.bzl
cargo/remote/: BUILD.ab_glyph-0.2.13.bazel  BUILD.ab_glyph_rasterizer-0.1.5.bazel  BUILD.adler32-1.2.0.bazel  BUILD.ahash-0.7.6.bazel  BUILD.aho-corasick-0.7.18.bazel  BUILD.alsa-0.5.0.bazel  BUILD.alsa-sys-0.3.1.bazel  BUILD.android_log-sys-0.2.0.bazel  BUILD.android_logger-0.10.1.bazel  BUILD.ansi_term-0.12.1.bazel  BUILD.anyhow-1.0.53.bazel  BUILD.approx-0.5.1.bazel  BUILD.arrayvec-0.7.2.bazel  BUILD.ash-0.34.0+1.2.203.bazel  BUILD.async-channel-1.6.1.bazel  BUILD.async-executor-1.4.1.bazel  BUILD.async-task-4.0.3.bazel  BUILD.bevy-0.6.0.bazel  BUILD.bevy-crevice-derive-0.6.0.bazel  BUILD.bevy_app-0.6.0.bazel  BUILD.bevy_asset-0.6.0.bazel  BUILD.bevy_audio-0.6.0.bazel  BUILD.bevy_core-0.6.0.bazel  BUILD.bevy_core_pipeline-0.6.0.bazel  BUILD.bevy_crevice-0.6.0.bazel  BUILD.bevy_derive-0.6.0.bazel  BUILD.bevy_diagnostic-0.6.0.bazel  BUILD.bevy_ecs-0.6.0.bazel  BUILD.bevy_ecs_macros-0.6.0.bazel  BUILD.bevy_gilrs-0.6.0.bazel  BUILD.bevy_gltf-0.6.0.bazel  BUILD.bevy_input-0.6.0.bazel  BUILD.bevy_internal-0.6.0.bazel  BUILD.bevy_log-0.6.0.bazel  BUILD.bevy_macro_utils-0.6.0.bazel  BUILD.bevy_math-0.6.0.bazel  BUILD.bevy_pbr-0.6.0.bazel  BUILD.bevy_reflect-0.6.0.bazel  BUILD.bevy_reflect_derive-0.6.0.bazel  BUILD.bevy_render-0.6.0.bazel  (+222 more)
libs/: BUILD
libs/flocks/: BUILD  Cargo.toml
libs/flocks/src/: boid.rs  (+1 more)
libs/logic/: BUILD  Cargo.toml
src/: main.rs
(+2 files in other folders)
