[workspace]
members = [
    "platforms/desktop",
    # "libs/logic",
    # "libs/flocks",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/google/cargo-raze
# run `cargo raze` to create the necessary BUILD files 
# for external dependencies
[workspace.metadata.raze]
# The path at which to write output files.
#
# `cargo raze` will generate Bazel-compatible BUILD files into this path.
# This can either be a relative path (e.g. "foo/bar"), relative to this
# Cargo.toml file; or relative to the Bazel workspace root (e.g. "//foo/bar").
workspace_path = "//cargo"
gen_workspace_prefix = "cargo"
# The two acceptable options are "Remote" and "Vendored" which
# is used to indicate whether the user is using a non-vendored or
# vendored set of dependencies.
genmode = "Remote"

default_gen_buildrs = true
render_package_aliases = false